--- a/client/src/pages/Home/components/PresentationPerson/PresentationPerson.module.css
+++ b/client/src/pages/Home/components/PresentationPerson/PresentationPerson.module.css
@@ -3,9 +3,10 @@
     flex-flow: row nowrap;
     justify-content: center;
     align-items: center;
+    padding: 6% 0%;
 }
 .container img{
-    width: 10%;
+    width: 15%;
     height: auto;
     border-radius: 200px;
     margin: 0em 2em;
@@ -13,14 +14,15 @@
 
 /*Writing effect https://css-tricks.com/snippets/css/typewriter-effect/ */
 .typewriter h2 {
+    font-size: 210%;
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid orange; /* The typwriter cursor */
     white-space: nowrap; /* Keeps the content on a single line */
     margin: 0 auto; /* Gives that scrolling effect as the typing happens */
     letter-spacing: .15em; /* Adjust as needed */
     animation: 
-      typing 3.5s steps(40, end),
-      blink-caret .75s step-end infinite;
+      typing 2s steps(20, end),
+      blink-caret .90s step-end infinite;
   }
   
   /* The typing effect */
