--- a/client/src/pages/Home/components/Section/Skill/SkillView.module.css
+++ b/client/src/pages/Home/components/Section/Skill/SkillView.module.css
@@ -10,6 +10,11 @@
     color: #212121;
 }
 
+.container hr{
+    margin-top: 10%;
+    border-top: 2px solid #707070;
+    width: 25%;
+}
 .container img{
     padding: 5% 7% 0% 7%;
     width: 180px;
