--- a/client/src/pages/Home/components/Section/Section.module.css
+++ b/client/src/pages/Home/components/Section/Section.module.css
@@ -5,8 +5,14 @@
     align-items: center;
     background-color: #757575;
     padding: 3% 15%;
+    margin: -8px;
 }
 
+@media (max-width: 500px) {
+    .container{
+        padding: 0%;
+    }
+}
 .container h1{
-    font-size: 230%;
+    font-size: 2.3em;
 }
