--- a/client/src/pages/Home/components/Section/Skill/SkillView.module.css
+++ b/client/src/pages/Home/components/Section/Skill/SkillView.module.css
@@ -4,7 +4,6 @@
     justify-content: center;
     align-items: center;
     margin: 1em;
-
     border-radius: 30px;
     background-color: white;
     color: #212121;
@@ -17,6 +16,7 @@
 }
 .container img{
     padding: 5% 7% 0% 7%;
-    width: 180px;
-    height: 160px;
+    width: 10em;
+    height: 10em;
 }
+
