Responsive 500px-900px

--- a/client/src/pages/Home/HomeView.module.css
+++ b/client/src/pages/Home/HomeView.module.css
@@ -10,11 +10,18 @@
     }
 } */
 /*Minor or equal to 400px*/
+@media (max-width: 900px) {
+    .container{
+        font-size:12px;
+    }
+}
+
 @media (max-width: 500px) {
     .container{
         font-size:10px;
     }
 }
+
 /* @media (min-width: 800px) {
     .container{
         font-size:14px;
