--- a/client/src/pages/Home/HomeView.module.css
+++ b/client/src/pages/Home/HomeView.module.css
@@ -11,6 +11,11 @@
 } */
 /*Minor or equal to 400px*/
 
+@media (min-width: 1400px) {
+    .container{
+        font-size:30px;
+    }
+}
 @media (max-width: 1400px) {
     .container{
         font-size:15px;
