--- a/client/src/pages/Home/components/Section/Skill/SkillView.module.css
+++ b/client/src/pages/Home/components/Section/Skill/SkillView.module.css
@@ -15,7 +15,7 @@
     width: 25%;
 }
 .container img{
-    padding: 5% 7% 0% 7%;
+    padding: 2em 1em 0em 1em;
     width: 10em;
     height: 10em;
 }
