--- a/client/src/pages/Home/components/Section/Skill/SkillView.module.css
+++ b/client/src/pages/Home/components/Section/Skill/SkillView.module.css
@@ -8,6 +8,14 @@
     background-color: white;
     color: #212121;
     width: 19em;
+    transition-duration: 0.4s;
+}
+
+.container:hover, .container:focus, .container:active{
+    background-color: #f5f5f5;
+    transform: scale(1.03);
+    -webkit-box-shadow: 0 0 20px #000;
+        box-shadow: 0 0 20px #000;
 }
 .container span{
     font-size: 1.5em;
