Added data to diferent theorical skills

--- a/client/src/pages/SkillTheoretical/SkillTheoreticalView.module.scss
+++ b/client/src/pages/SkillTheoretical/SkillTheoreticalView.module.scss
@@ -88,7 +88,7 @@ p{
         font-size: 1.7em;
     }
     img{
-        width: 100%;
+        width: 400px;
     }
     @media (max-width: 1024px) {
         flex-flow: column nowrap;
