--- a/client/src/pages/SkillTool/SkillToolView.module.scss
+++ b/client/src/pages/SkillTool/SkillToolView.module.scss
@@ -13,6 +13,7 @@ p{
     border-radius: 10px;
     text-align: center;
     padding: 0.4em;
+    width: 25%;
     img{
         width: 100%;
     }
@@ -24,6 +25,7 @@ p{
     }
     @media (max-width: 768px) {
         width: 25%;
+
     }
     @media (max-width: 425px) {
         width: 30%;
