--- a/client/src/pages/SkillTool/DemoProyect/DemoProyectView.module.scss
+++ b/client/src/pages/SkillTool/DemoProyect/DemoProyectView.module.scss
@@ -8,10 +8,17 @@
     align-items: center;
     width: 80%;
     margin: 10px 10px;
-    font-size: 1.1em;
+    font-size: 1.5em;
+    @media (max-width: 1024px) {
+        font-size: 1.2em;
+    }
+    @media (max-width: 425px) {
+        font-size: 1.2em;
+    }
     p{
         text-align: justify;
     }
+    
 }
 .proyectImage{
     img{
